Final round of changes

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -342,6 +342,7 @@ p
 
   body
     background: image-url("campaigns/kids/jesus.png") no-repeat center 105px #EAE7DA
+    background-image: none
 
   .kids
     width: auto
@@ -368,7 +369,7 @@ p
   .intro-help
     font-size: 24px
     margin: 0
-    padding: 200px 0 0
+    padding: 0 0
     text-align: center
     width: auto
 
@@ -384,7 +385,8 @@ p
     padding: 0
 
   .intro-icon
-    display: none
+    margin: 25px auto 25px
+    display: block
 
 
   // !Download chunk
@@ -559,6 +561,7 @@ p
 
     body
       background: image-url("campaigns/kids/jesus@2x.png") no-repeat center 105px #EAE7DA
+      background-image: none
       background-size: 480px 190px
 
     .download-ios
