--- a/app/views/campaigns/kids/_share.html.haml
+++ b/app/views/campaigns/kids/_share.html.haml
@@ -14,8 +14,9 @@
     Facebook
 
 
-  - twitter     = "The Bible App for Kids from @YouVersion is here! It’s fun and completely free. Download: bible.com/kids #kidsbible"
-  %a.share-tw{target:"_blank", href: "https://twitter.com/intent/tweet?text=#{twitter}#"}
+  - twitter     = "The Bible App for Kids from @YouVersion is here! It’s fun and completely free. Download: bible.com/kids"
+  - twitter_hashtags = "kidsbible"
+  %a.share-tw{target:"_blank", href: "https://twitter.com/intent/tweet?text=#{twitter}&hashtags=#{twitter_hashtags}"}
     Twitter
 
 
