--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -38,7 +38,6 @@
 
       -# !Logo and intro copy
 
-      %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
       %h1.intro-bible
         The Bible App
       .intro-forkids
@@ -49,13 +48,15 @@
       %h3.intro-yv
         by YouVersion
 
+      %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
+
       %p.intro-help
         Help your kids fall in love with God’s Word.
 
       %img.intro-img{ src: "/assets/campaigns/kids/hdr-jesus.png", alt: "Jesus and friends"}
 
       %p.intro-coming
-        Now available!
+        Download for free!
 
       -# !App store buttons
       .download
@@ -99,14 +100,14 @@
         %p.features-5
           Kid-friendly navigation
 
-      -# !App store buttons
-      .download
-        %a.download-ios{href: "#"}
-          Available on the App store
-        %a.download-play{href: "#"}
-          Get it on Google Play
-        %a.download-amazon{href: "#"}
-          Available at Amazon Appstore for Android
+      / -# !App store buttons
+      / .download
+      /   %a.download-ios{href: "#"}
+      /     Available on the App store
+      /   %a.download-play{href: "#"}
+      /     Get it on Google Play
+      /   %a.download-amazon{href: "#"}
+      /     Available at Amazon Appstore for Android
 
 
       -# !Share chunk
