Mobile redirect urls

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -60,11 +60,11 @@
 
       -# !App store buttons
       .download
-        %a.download-ios{href: "#"}
+        %a.download-ios{href: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"}
           Available on the App store
-        %a.download-play{href: "#"}
+        %a.download-play{href: "http://play.google.com/store/apps/details?id=com.bible.kids"}
           Get it on Google Play
-        %a.download-amazon{href: "#"}
+        %a.download-amazon{href: "http://www.amazon.com/gp/product/B00GURLC40"}
           Available at Amazon Appstore for Android
 
       -# !iPad hero screenshot
