--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -42,6 +42,22 @@
       background-position: 7px center
       margin: 0 0 2px
 
+    .profile-hdr-btn,
+    .profile-hdr-friend,
+    .profile-hdr-addfriend
+      padding: 4px 10px 5px
+      font-size: 13px
+
+    .profile-hdr-friend
+      color: #fff
+      font-weight: bold
+      border-radius: 4px
+      padding-left: 30px
+      background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
+      position: absolute
+      right: 20px
+      top: 22px
+
     #toggle_comments
       position: relative
       top: auto
