--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -78,12 +78,22 @@
     background:
       image: image-url("icon_small_link.png")
 
-  .profile-hdr-btn
+  .profile-hdr-btn,
+  .profile-hdr-friend,
+  .profile-hdr-addfriend
     position: absolute
-    top: 15px
-    left: 45px
-    background-color: #fff
-    +box-shadow(#bbb 0 1px 0 0)
+    top: 50px
+    right: 185px
+    padding: 4px 10px 5px
+    font-size: 13px
+
+  .profile-hdr-friend
+    color: #fff
+    font-weight: bold
+    border-radius: 4px
+    padding-left: 30px
+    background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
+
 
 // !Tab navigation
 
