--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -190,6 +190,10 @@ article.profile
   .friends-count-help
     font-size: 12px
 
+  .friends-count .tooltip
+    position: static
+    width: auto
+
   .friends-count-find,
   .friends-view-requests
     position: relative
@@ -284,7 +288,10 @@ article.profile
     white-space: nowrap
     top: 27px
     right: 0
-    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px
+    background: #ddd image-url("friend-request-sprite.png") no-repeat center -128px  
+
+  .friend-details-delete:hover  
+    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px    
 
 
 // !Notifications
