adding titles for user pages (activity, friends, notes, bookmarks, highlights, badges)

--- a/app/views/users/badges.html.haml
+++ b/app/views/users/badges.html.haml
@@ -1,3 +1,5 @@
+- @title = @me ? t('users.my badges') : t('badges.user badges', user: @user.name || @user.username)
+
 - content_for :user_main do
   - if @badges.empty?
     %p.profile-badges-none
