--- a/app/views/users/bookmarks.html.haml
+++ b/app/views/users/bookmarks.html.haml
@@ -1,4 +1,5 @@
 - @sidebar = false
+- @title = @me ? t('users.my bookmarks') : t('users.user bookmarks', user: @user.name || @user.username)
 
 - if current_user_is?(@user)
   - labels = Bookmark.labels(auth: current_auth)
