--- a/app/views/users/friends.html.haml
+++ b/app/views/users/friends.html.haml
@@ -1,4 +1,5 @@
 - @sidebar = false
+- @title = @me ? t('users.my friends') : t('users.user friends', user: @user.name || @user.username)
 
 .profile-friends
 
