--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -1,4 +1,5 @@
 - @sidebar = false
+- @title = @me ? t('users.my notes') : t('users.user notes', user: @user.name || @user.username)
 
 .social-feed
   = render partial: "moments/cards", locals: {moments: @notes,comments_displayed: false}
