added content_for block

--- a/app/views/users/badges.html.haml
+++ b/app/views/users/badges.html.haml
@@ -1,4 +1,6 @@
 - @title = @me ? t('users.my badges') : t('badges.user badges', user: @user.name || @user.username)
+- content_for :title do 
+  = @title
 
 - content_for :user_main do
   - if @badges.empty?
