--- a/app/views/users/friends.html.haml
+++ b/app/views/users/friends.html.haml
@@ -1,5 +1,7 @@
 - @sidebar = false
 - @title = @me ? t('users.my friends') : t('users.user friends', user: @user.name || @user.username)
+- content_for :title do 
+  = @title
 
 .profile-friends
 
