Updated VoD and highlight moment icons

--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -5,7 +5,7 @@
   -# !the content of the moment
   .moment-top
     .moment-bm
-      = image_tag "social-cap-bm.png", class: "moment-img"
+      = image_tag "social-cap-hi.png", class: "moment-img"
       %span.moment-avatar
         = image_tag md_avatar.url
       %p.moment-bm-text
