Friendship status / request buttons in place.

--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -27,17 +27,17 @@
       - if @user.bio
         %p.profile-hdr-info-about
           = @user.bio
-
-      -# Edit profile button
-      - if @me
-        %form{action: edit_user_path(@user)}
-          %button.profile-hdr-btn.action_button_blue= t("users.profile.edit")
-      -# Tells if person is friend
-      %span.profile-hdr-friend
-        Friends
-      -# Add friend button
-      %a{href: "#", class: "profile-hdr-addfriend action_button_green", title: "Send this person a friend request"}
-        Add friend
+      
+      - if current_user_is? @user
+        = link_to "Edit Profile", edit_user_path(@user), class: "profile-hdr-btn action_button_blue"
+      
+      - else
+        - if Friend.with? @user, auth: current_auth
+          %span.profile-hdr-friend
+            Friends
+        - else
+          = form_tag offer_friendships_path(user_id: @user.id) , method: :post do
+            = submit_tag "Add Friend", class: "profile-hdr-addfriend action_button_green", title: "Send this person a friend request"
 
       - #toggle_comments
 
