Fixed profile tabs in mobile view. Added retina stylesheet for mobile.

--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -101,6 +101,7 @@
 
   .profile-tabs
     overflow: hidden
+    margin: 0
 
   .profile-tabs-activity,
   .profile-tabs-friends,
@@ -171,6 +172,7 @@
 
   .profile-tabs-friends.highlight
     background-position: 15px -55px
+    width: 120px
 
   .profile-tabs-notes.highlight
     background-position: 15px -119px
@@ -247,7 +249,7 @@
 // !Friends tab
 
 .profile-friends
-  margin: -15px 0 0
+  margin: 0
   background-color: #fff
   border-radius: 0 0 5px 5px
   padding: 30px 30px 20px
