--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -4,32 +4,33 @@
 - # current_user or fallback to params[:id]
 = render partial: "users/mobile_menu"
 
-= form_for @settings, url: update_notifications_user_path( current_user || params[:id] ,token: params[:token]), method: :put do |n|
-  - unless @settings.errors.blank?
-    .form_errors
-      =t("users.profile.notification errors")
-    %ul
-      - @settings.errors.full_messages.each do |err|
-        %li= err
-  %p
-    = n.check_box :badges
-    = n.label :badges, t('users.notifications.badges')
-  %p
-    = n.check_box :follower
-    = n.label :follower, t('users.notifications.follower')
-  %p
-    = n.check_box :newsletter
-    = n.label :newsletter, t('users.notifications.newsletter')
-  %p
-    = n.check_box :note_like
-    = n.label :note_like, t('users.notifications.note_like')
-  %p
-    = n.check_box :reading_plans
-    = n.label :reading_plans, t('users.notifications.reading_plans')
-  %p
-    = n.check_box :partners
-    = n.label :partners, t('users.notifications.publishing partners')
-  %p
-    %button{class: "action_button_green", action: "submit"}= t('users.notifications.update')
-  - if params[:token]
-    = hidden_field_tag :token, params[:token]
+%article
+  = form_for @settings, url: update_notifications_user_path( current_user || params[:id] ,token: params[:token]), method: :put do |n|
+    - unless @settings.errors.blank?
+      .form_errors
+        =t("users.profile.notification errors")
+      %ul
+        - @settings.errors.full_messages.each do |err|
+          %li= err
+    %p
+      = n.check_box :badges
+      = n.label :badges, t('users.notifications.badges')
+    %p
+      = n.check_box :follower
+      = n.label :follower, t('users.notifications.follower')
+    %p
+      = n.check_box :newsletter
+      = n.label :newsletter, t('users.notifications.newsletter')
+    %p
+      = n.check_box :note_like
+      = n.label :note_like, t('users.notifications.note_like')
+    %p
+      = n.check_box :reading_plans
+      = n.label :reading_plans, t('users.notifications.reading_plans')
+    %p
+      = n.check_box :partners
+      = n.label :partners, t('users.notifications.publishing partners')
+    %p
+      %button{class: "action_button_green", action: "submit"}= t('users.notifications.update')
+    - if params[:token]
+      = hidden_field_tag :token, params[:token]
