Fixed friend button/status positioning. Also noticed one of the tabs was wonky so fixed it.

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -48,6 +48,10 @@
     .profile-hdr-addfriend
       padding: 4px 10px 5px
       font-size: 13px
+      position: relative
+      top: auto
+      left: auto
+      right: auto
 
     .profile-hdr-friend
       color: #fff
@@ -144,6 +148,7 @@ article.profile
 
   .profile-tabs-friends.highlight
     background-position: center -118px
+    width: 15.5%
 
   .profile-tabs-notes.highlight
     background-position: center -245px
