Push settings work.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -1,3 +1,14 @@
+// ------ Edit notifications page
+.notification-settings-group
+  margin-bottom: 0
+  
+  .settings-group-item
+    margin-bottom: 2em
+
+    p
+      margin-bottom: 0
+
+
 // ----------Notifications page
 
 .notifications
