fix moments top padding, adjust form display for mobile, fix notifications menu for mobile

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -109,6 +109,7 @@
   @import mobile/user_settings
   @import mobile/progress_bars
   @import mobile/footer
+  @import mobile/form_elements
   @import mobile/modal_window
   // @import mobile/reference_tokens
   @import mobile/embedded_reader
