--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -101,7 +101,7 @@
 
   .profile-tabs
     overflow: hidden
-    margin: 0
+    margin: 0 0 15px 0
 
   .profile-tabs-activity,
   .profile-tabs-friends,
