Update email template tweaks.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -1,3 +1,14 @@
+// ------ Edit email page
+.confirmation-message
+  background:
+    color: #d9e4c9
+    image: image-url("flash_notice.png")
+  background-repeat: no-repeat
+  color: #4b7518
+  border: 1px solid #91b164
+  font-size: 13px
+  padding: 10px 20px
+
 // ------ Edit notifications page
 .notification-settings-group
   margin-bottom: 0
