--- a/app/views/users/_notification_settings_group.html.haml
+++ b/app/views/users/_notification_settings_group.html.haml
@@ -5,4 +5,4 @@
   = label_tag "settings[#{type.to_s}][email]", "Email"
 
   = check_box_tag "settings[#{type.to_s}][push]", "1", @settings.notification_settings.send(type.to_sym).push
-  = label_tag "settings[#{type.to_s}][push]", "Push"
+  = label_tag "settings[#{type.to_s}][push]", "Mobile"
