--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -5,4 +5,4 @@
 
 %article.social-detail
 
-  = render partial: "moments/note", locals: {moment: @note}
+  = render partial: "moments/note", locals: {moment: @note, comments_displayed: true}
