user area settings menu slide up/down, fix user area select by removing min-width

--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -26,4 +26,9 @@ select
 textarea
   width: 100% !important
 
+.country_select > select,
+select#user_timezone, 
+select#user_language_tag
+  min-width: 0 !important
+
 
