--- a/app/assets/stylesheets/mobile/_tabs.sass
+++ b/app/assets/stylesheets/mobile/_tabs.sass
@@ -95,3 +95,10 @@
 #main article .combo_button + .split_pane,
 #main article .tab_navigation + table
   margin-top: 40px !important
+
+h3.hd
+  padding-left: 21px
+  background: image-url("header_icon_gear.png") no-repeat left center  
+
+.mobile-menu-wrap
+  display: none
