Timestamps on comments.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -252,6 +252,11 @@ body.transition .moment
   width: 315px
   margin-bottom: 0
 
+.moment-comment-dt
+  display: block
+  font-size: 11px
+  color: #888
+
 .moment-comments-input
   overflow: hidden
   padding: 10px
