Style and layout tweaks to the friends page

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -22,7 +22,7 @@
       top: 0
 
     .profile-hdr-name
-      margin: 20px 0 10px
+      margin: 15px 0 15px
       font-size: 42px
       text-align: center
 
@@ -189,10 +189,10 @@ article.profile
 
   .friends-count-help
     font-size: 12px
-
-  .friends-count .tooltip
-    position: static
-    width: auto
+    background-position: 0 3px
+    line-height: 1.3em
+    padding: 3px 0 0 21px
+    margin: 7px 0
 
   .friends-count-find,
   .friends-view-requests
@@ -276,7 +276,10 @@ article.profile
 
   .friend-details-name
     margin: 0 0 -5px 85px
-    padding: 33px 0 0
+    padding: 31px 0 0
+    font-size: 16px
+    line-height: 1.2em
+    width: 60%
 
   .friend-details-delete
     position: absolute
@@ -288,10 +291,7 @@ article.profile
     white-space: nowrap
     top: 27px
     right: 0
-    background: #ddd image-url("friend-request-sprite.png") no-repeat center -128px
-
-  .friend-details-delete:hover
-    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px
+    background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
 
 // !Notifications
