--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -258,7 +258,6 @@
   position: relative
   border-bottom: 1px dotted #e1e1e1
   padding: 0 0 20px 0
-  min-height: 90px
 
 .friends-count-have
   font: 200 34px "Helvetica Neue", Arial, sans-serif
@@ -270,23 +269,12 @@
 .friends-count-help
   padding: 0 0 0 21px
   background: image-url("icon_help.png") no-repeat 0 center
-  margin: 0 0 0 8px
+  margin: 0
   position: relative
-  display: inline-block
+  display: block
   cursor: pointer
-  min-height: 16px
-
-.friends-count .tooltip
-  display: none
+  color: #888
   font-size: 12px
-  color: #888 !important
-  font-style: italic
-
-.friends-count .show.tooltip
-  display: inline-block
-  position: absolute
-  width: 250px
-  font-weight: bold
 
 .friends-count-find
   width: 150px
@@ -308,13 +296,14 @@
 .friend-details
   position: relative
   border-bottom: 1px dotted #e1e1e1
-  width: 49%
+  width: 32%
   float: left
   height: 90px
   margin: 0 1% 0 0
 
-.friend-details:nth-of-type(even)
-  margin: 0 0 0 1%
+.friend-details:nth-child(3n)
+  margin: 0
+  width: 34%
 
 .friend-details-avatar
   width: 70px
@@ -326,20 +315,14 @@
   top: 10px
 
 .friend-details-name
-  margin: 32px 0 -5px 85px
+  margin: 24px 0 -5px 85px
   display: block
 
 .friend-details-delete
-  position: absolute
-  height: 36px
-  width: 36px
-  +border-radius(36px)
-  overflow: hidden
-  text-indent: 100%
-  white-space: nowrap
-  top: 27px
-  right: 0
-  background: #ddd image-url("friend-request-sprite.png") no-repeat center -128px
+  margin: 0 0 0 86px
+  color: #777
+  font-size: 11px
+  font-weight: normal
 
 .friend-details-delete:hover
   background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px
