--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -457,6 +457,18 @@ article .nav_items,
     a.next
       background: image-url("mobile/next_arrow.png") 22px 13px no-repeat
 
+
+// `Article Top Section
+//----------------------------------------------------------------------------------------------------
+
+.top_section
+  +border-radius(0)
+  +background-image(none)
+  background-color: #e9e9e9
+  border: 0
+    bottom: 0
+
+
 // `Main > Footers
 //----------------------------------------------------------------------------------------------------
 
