Added pending status to friend page

--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -80,7 +80,8 @@
 
   .profile-hdr-btn,
   .profile-hdr-friend,
-  .profile-hdr-addfriend
+  .profile-hdr-addfriend,
+  .profile-hdr-pending
     position: absolute
     top: 50px
     right: 185px
@@ -93,6 +94,12 @@
     border-radius: 4px
     padding-left: 30px
     background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
+
+  .profile-hdr-pending
+    background-color: #888
+    color: #fff
+    padding: 2px 10px 4px
+    +border-radius(3px)
 
 
 // !Tab navigation
