--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -63,6 +63,10 @@
       right: 20px
       top: 22px
 
+    .profile-hdr-pending
+      top: 20px
+      right: 20px
+
     #toggle_comments
       position: relative
       top: auto
@@ -71,6 +75,7 @@
 article.profile
   .mobile
     display: none
+
 
 // !Tab navigation
 
