--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -81,11 +81,13 @@
   .profile-hdr-btn,
   .profile-hdr-friend,
   .profile-hdr-addfriend,
-  .profile-hdr-pending
+  .profile-hdr-pending,
+  .profile-hdr-accept,
+  .profile-hdr-deny
     position: absolute
     top: 50px
     right: 185px
-    padding: 4px 10px 5px
+    padding: 4px 10px 6px
     font-size: 13px
 
   .profile-hdr-friend
@@ -100,6 +102,9 @@
     color: #fff
     padding: 2px 10px 4px
     +border-radius(3px)
+
+  .profile-hdr-deny
+    top: 80px
 
 
 // !Tab navigation
