--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -27,8 +27,41 @@ textarea
   width: 100% !important
 
 .country_select > select,
-select#user_timezone, 
+select#user_timezone,
 select#user_language_tag
   min-width: 0 !important
 
+// -------------Button stuff
+
+input[type="submit"].action_button_green,
+input[type="submit"].action_button_blue,
+input[type="submit"].action_button_red,
+input[type="submit"].action_button_grey,
+.action_button_blue,
+.action_button_green,
+.action_button_red,
+.action_button_grey
+  padding: 10px 0px  !important
+  border-radius: 4px
+  border: none
+  width: 100%
+
+input[type="submit"]
+  background-color: #81a950
+  +background-image(none)
+  width: 100%
+  padding: 10px 0
+  color: #fff
+  text-shadow: rgba(0,0,0,0.3) 0 -1px 0
+  font-size: 15px
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0, inset rgba(255, 255, 255,0.2) 0 3px 0 !important)
+  border: none
+
+input[type="submit"]:hover
+  background-color: #81a950
+  +background-image(none)
+  color: #fff
+  text-shadow: rgba(0,0,0,0.3) 0 -1px 0
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0, inset rgba(255, 255, 255,0.2) 0 3px 0 !important)
+  border: none
 
