--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -45,9 +45,11 @@
 
     .profile-hdr-btn,
     .profile-hdr-friend,
-    .profile-hdr-addfriend
+    .profile-hdr-addfriend,
+    .profile-hdr-accept,
+    .profile-hdr-deny
       padding: 4px 10px 5px
-      font-size: 13px
+      font-size: 14px
       position: relative
       top: auto
       left: auto
@@ -66,6 +68,9 @@
     .profile-hdr-pending
       top: 20px
       right: 20px
+
+    .profile-hdr-accept
+      margin: 0 0 5px
 
     #toggle_comments
       position: relative
