--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,5 +2,8 @@
 - content_for :title do 
   = @title
 
-.social-feed
-  = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: false}
+.social-feed-wrap
+  .social-feed
+    = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: false}
+
+= render partial: "shared/moments_load_more", locals: {resource: "users", url_params: ["user_id=#{@user.username}"]}
