--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,4 +1,5 @@
 - @sidebar = false
+
 .social-feed-wrap
   .social-feed
     = render partial: "moments/daily_verse"
@@ -8,37 +9,4 @@
     = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
 
 
-= link_to("Load more","#", id: "load-more", "data-page" => @page, style: "display: block; text-align: center; border: 1px solid #ccc; padding: 4px 10px; background:#aaa;")
-
-:javascript
-  $('#load-more').click(function (ev) {
-      ev.preventDefault();
-      var pagination_link = $(ev.target);
-      var next_page = pagination_link.data("page") + 1;
-      $.ajax({
-        type: "GET",
-        url: "/moments/_cards?page=" + next_page,
-        dataType: "html",
-        success: function (data) {
-            
-            var next_feed_container = $( "<div/>", {"class": "social-feed"} )
-            $('.social-feed-wrap').append(next_feed_container);
-            next_feed_container.append(data);
-
-            next_feed_container.find(".moment").wookmark({
-              autoResize:   true,
-              offset:       15,
-              container:    next_feed_container
-            });
-
-            next_feed_container.find(".moment-verse.empty").each(function(){
-              new Moments.Verse({el: $(this)});
-            });
-        
-            pagination_link.data("page", next_page);
-        },
-        error: function (xhr, status) {
-            console.log("Sorry, there was a problem!");
-        }
-    });
-  });
+= render partial: "shared/moments_load_more", locals: {resource: "moments"}
